--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-</body>
+
 <header>
    <h1 id="title">Título</h1>
    <nav>
@@ -19,4 +19,18 @@
     </ul>
    </nav>
 </header>
+<main id="main-container">
+    <div class="produto">
+        <h2>Produto 1</h2>
+        <p>Descrição</p>
+    </div>
+    <div class="produto"> 
+        <h2>Produto 2</h2>
+        <p>Descrição</p>
+    </div>
+</main>
+<footer>
+    <p>Rodapé</p>
+</footer>
+</body>
 </html>
