--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +8,38 @@
     <link rel="stylesheet" href="Styles/style.css" class="css">
     <script src="Scripts/script.js" defer></script>
 </head>
-<body>
-    
 
-<header>
-   <h1 id="title">Título</h1>
-   <nav>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Contatos</a></li>
-    </ul>
-   </nav>
-</header>
-<main id="main-container">
-    <div class="produto">
-        <h2>Produto 1</h2>
-        <p>Descrição</p>
-    </div>
-    <div class="produto"> 
-        <h2>Produto 2</h2>
-        <p>Descrição</p>
-    </div>
-</main>
-<footer>
-    <p>Rodapé</p>
-</footer>
+<body>
+
+
+    <header>
+        <h1 id="title">Título</h1>
+        <nav>
+            <ul class="mudar">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Contatos</a></li>
+            </ul>
+            <ol class="mudar2">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Contatos</a></li>
+            </ol>
+        </nav>
+    </header>
+    <main id="main-container">
+        <div class="produto">
+            <h2>Produto 1</h2>
+            <p>Descrição</p>
+        </div>
+        <div class="produto">
+            <h2>Produto 2</h2>
+            <p>Descrição</p>
+        </div>
+    </main>
+    <footer>
+        <p>Rodapé</p>
+    </footer>
 </body>
+
 </html>
